Update index.html and transform.py
Add "Last Update" time

--- a/AWS workshop/src/index.html
+++ b/AWS workshop/src/index.html
@@ -103,7 +103,8 @@
                 cityListElement.innerHTML = '';
 
                 if (data.length > 0) {
-                    updateBanner.innerText = `Last Updated: ${data[0].date}`;
+                    const lastUpdated = data[0].last_updated_utc || data[0].date;
+                    updateBanner.innerText = `Last Updated: ${lastUpdated} (UTC)`;
                 }
 
                 data.forEach((item) => {
